# market-fuzzer

./: .dockerignore  .env.example  .gitignore  DEMO_FALLBACK.md  Dockerfile  HACKATHON_RUNBOOK.md  HANDOFF.md  LICENSE  Makefile  OVERNIGHT_MVP_STATUS.md  PERFORMANCE_AUDIT.md  README.md  SYNTHETIC_MARKET_FIDELITY_AUDIT.md  THIRD_PARTY_NOTICES.md  UI_REDESIGN_PLAN.md  demo.py  docker-compose.yml  mypy.strategy_lab.ini  pyproject.toml  requirements.txt  run_demo_clean.py
.greptile/: config.json  rules.md
app/: __init__.py  analyst.py  arena.py  cli.py  compiler.py  decision_benchmark.py  engine.py  execution_arena.py  execution_challenge_designer.py  execution_feedback.py  execution_store.py  external_adapter.py  governance.py  main.py  models.py  product.py  robustness_product.py  scenario_studio.py  simulation.py  strategy_lab.py  strategy_language.py  strategy_protocol.py  strategy_runtime.py  synthetic_market.py
artifacts/: README.md
docs/: 12h_fix_plan.md  ADVERSARIAL_ROBUSTNESS_CAMPAIGN.md  AGENT_HANDOFF_NEXT_ENTERPRISE_BLOCK.md  ARCHITECTURE.md  ARENA_METHODOLOGY.md  ARENA_SECURITY.md  BACKTEST_CONFORMANCE.md  BUILD_WEEK_PROVENANCE.md  CALIBRATION_DATA_BOUNDARY.md  CODEX_COLLABORATION.md  COMPETITIVE_ANALYSIS_RAW.md  COUNTEREXAMPLE_MINIMIZATION.md  DATA_AND_SIMULATION_ARCHITECTURE.md  DECISIONS.md  DECISION_BENCHMARK.md  DECISION_EVIDENCE.md  DEMO_SCRIPT.md  DEVPOST_DRAFT.md  ENTERPRISE_PRODUCT.md  EXCHANGE_COMMANDS.md  EXECUTION_CHALLENGE.md  FIRST_RUN_GUIDE.md  FUZZING_METHODOLOGY.md  GTM_STRATEGY.md  HACKATHON_WORK.md  JUDGE_GUIDE.md  LIMITATIONS.md  (+29 more)
(+330 files in other folders)
