[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "synthetic-market-world"
version = "1.0.0rc1"
description = "Counterfactual synthetic exchange and strategy stress-testing laboratory"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "numpy>=2,<3",
  "openai>=2.0,<3",
  "pandas>=2.2,<4",
  "pyarrow>=18,<25",
  "pydantic>=2.10,<3",
  "pyyaml>=6,<7",
  "typer>=0.15,<1",
  "uvicorn>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "hypothesis>=6.120,<7",
  "mypy>=1.14,<2",
  "playwright>=1.50,<2",
  "pytest>=8,<10",
  "ruff>=0.9,<1",
]

[project.scripts]
smw = "app.cli:entrypoint"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
packages = ["app"]
ignore_missing_imports = true
warn_unused_ignores = false
disable_error_code = ["import-untyped"]
follow_imports = "silent"
exclude = [
    "^app/break_test/",
    "^app/api/app\\.py$",
    "^docs/",
]
